# WDS

./: #shell.nix#  CMakeLists.txt  README.md  imgui.ini  shell.nix  snapcraft.yaml
.github/workflows/: CMake_Windows.yml  cmake.yml  snap.yml
include/: errors.hpp
include/glad/: glad.h
lib/: errors.cpp
lib/AventraRenderEngine/: Aventra_arc.cpp  Aventra_rect.cpp  CMakeLists.txt  lib.cpp  menus.cpp
lib/AventraRenderEngine/include/: Aventra.hpp  Aventra_arc.hpp  Aventra_line.hpp  Aventra_rect.hpp  errors.hpp
lib/AventraRenderEngine/include/glad/: glad.h
lib/AventraRenderEngine/kernel/: #arc_kernel.cu#  arc_kernel.cu
lib/AventraRenderEngine/src/: Aventra_arc.cpp  Aventra_line.cpp  Aventra_rect.cpp  glad.c  lib.cpp  menus.cpp
lib/AventraRenderEngine/tests/: test_arc.cpp  test_rect.cpp
lib/WaveMath/: CMakeLists.txt
lib/WaveMath/include/: waveCalculations.hpp  waveMovement.hpp
lib/WaveMath/src/: waveCalculations.cpp  waveMovement.cpp
lib/WaveMath/tests/: test_movement.cpp
src/: glad.c  main.cpp
tests/: main_test.cpp
